--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -267,7 +267,10 @@
       flex-direction: column
     &__dialog
       width: 350px
+      height: 90%
       padding: 33px 50px 
+      &--visible
+        overflow-y: scroll
     &__button
       margin-bottom: 15px
          
